--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,6 +36,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: Dockerfile-dev
+          file: Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: aiastia/wordfillerapp
